# reck

./: CMakeLists.txt  README.md
dev/: local_build.sh
include/: debug.hpp  defer.hpp  filesystem.hpp  maps_parser.hpp  ptracer.hpp  serializer.hpp
src/: CMakeLists.txt  maps_parser.cpp  ptracer.cpp  serializer.cpp
test/: CMakeLists.txt  make_ckpt.cpp  make_ckpt_threads.cpp  parse_maps.cpp  ptracer_attach.cpp  restore.cpp  restore_threads.cpp  write_read_mdata.cpp
